<resources>
    <string name="app_name">loclarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_alarm">Alarms</string>
    <string name="menu_settings">Settings</string>

    <string name="GOOGLE_MAPS_API_KEY">AIzaSyD0kACOietBw9It5g_iGNE2vrJrRnv-cmY</string>
    <string name="alarm_location">Alarm location?..</string>
    <string name="menu_icon">menu_icon</string>
    <string name="current_location_button">current_location_button</string>
    <string name="enter_radius_in_meters">Enter radius in meters</string>
    <string name="radius_in_meters">Radius in meters</string>
    <string name="alarm_icon">alarm icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="edit_icon">edit alarm icon</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="nothing_here">nothing here image</string>
    <string name="nothing_here_create_alarm">Nothing here. Create alarm.!</string>
    <string name="enter_alarm_name">Enter alarm name</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
</resources>