<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.alarms.AlarmFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/navigation_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="40dp"
            android:clickable="true"
            android:contentDescription="@string/menu_icon"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="5dp"
            android:src="@drawable/menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/quantum_grey900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/menu_alarm"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/navigation_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/navigation_menu"
            app:layout_constraintTop_toTopOf="@+id/navigation_menu" />

        <ImageView
            android:id="@+id/nothing_here_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/nothing_here"
            android:padding="10dp"
            android:src="@drawable/nothing_here"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/nothing_here_text"
            app:layout_constraintTop_toBottomOf="@+id/navigation_menu" />

        <TextView
            android:id="@+id/nothing_here_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/nothing_here_create_alarm"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>