<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:text="@string/enter_radius_in_meters"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomStart="16dp"
        app:startIconDrawable="@drawable/alarm_name_icon"
        app:startIconTint="@color/quantum_grey700"
        android:hapticFeedbackEnabled="true"
        app:boxCornerRadiusBottomEnd="16dp"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        android:hint="@string/enter_alarm_name"
        android:textColorHint="@color/quantum_grey700">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_alarm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textColor="@android:color/black"
        android:textColorHint="@color/quantum_grey700" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxCornerRadiusBottomStart="16dp"
        app:startIconDrawable="@drawable/target_icon"
        app:startIconTint="@color/quantum_grey700"
        android:hapticFeedbackEnabled="true"
        app:boxCornerRadiusBottomEnd="16dp"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        android:hint="@string/radius_in_meters"
        android:textColorHint="@color/quantum_grey700">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@color/quantum_grey700" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
