<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/google_maps_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:contentDescription="@string/menu_icon"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="5dp"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/search_icon"
        android:drawableEnd="@drawable/close_icon"
        android:drawablePadding="5dp"
        android:drawableTint="@color/quantum_grey500"
        android:hint="@string/alarm_location"
        android:letterSpacing="0.05"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/quantum_grey500"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/current_location"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/current_location"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/current_location_button"
        android:padding="12dp"
        app:tint="@color/quantum_grey500"
        android:background="@drawable/rounded_corner"
        android:src="@drawable/target_icon"
        app:layout_constraintBottom_toBottomOf="@+id/search_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_results_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/square_corner"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>
